# lost_and_found_app

./: README.md  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
alembic/: env.py
alembic/versions/: baa9097006be_initial_migration.py
app/: backend_pre_start.py  main.py  settings.py
app/core/: main_router.py
app/lost_found/: __init__.py  models.py  router.py  schema.py
app/match/: __init__.py  router.py  schema.py
app/utils/: matching.py  minio.py
