[tool.poetry]
name = "app"
version = "0.1"
description = "fastAPI Lost and found"
authors = ["Raheel Siddiqui"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
FastAPI-SQLAlchemy = "^0.2.1"
orjson = "^3.10.15"
pydantic = "^2.10.5"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
SQLAlchemy = "^2.0.37"
uvicorn = "^0.34.0"
black = "^24.10.0"
alembic = "^1.14.0"
pytest = "^8.3.4"
unittest2 = "^1.1.0"
loguru = "^0.7.3"
tenacity = "^9.0.0"
psycopg = "^3.2.4"
pre-commit = "^4.0.1"
typing-extensions = "^4.12.2"
boto3 = "^1.38.41"
python-multipart = "^0.0.20"
rapidfuzz = "^3.13.0"
openai = "^1.90.0"
minio = "^7.2.15"
pylint = "^3.3.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"

